# chipsec_integration_tests

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  chipsec.cmake  config.cmake  macros.cmake  targets.cmake
chipsec/: CMakeLists.txt
chipsec/modules/bareflank/: base_module.py
chipsec/modules/bareflank/cpuid/: test_ack.py  test_emulation.py
chipsec_modules/: CMakeLists.txt
chipsec_modules/bareflank/: __main__.py  base_module.py
chipsec_modules/bareflank/cpuid/: test_ack.py  test_another_cpuid.py  test_emulation.py  test_emulator_and_handler.py  test_emulator_and_handler_exception.py  test_emulator_basic.py  test_emulator_does_not_leak_hardware.py  test_emulator_inputs_preserved.py  test_emulator_multiple.py  test_handler_basic.py  test_handler_inputs_preserved.py  test_handler_multiple.py  test_handler_vcpu_matches_hardware.py  test_pass_through.py  test_repeat_vmm_init.py
chipsec_vmms/: CMakeLists.txt  integration_cpuid_emulation.cpp  integration_cpuid_pass_through.cpp
chipsec_vmms/cpuid/: CMakeLists.txt  emulate.cpp  emulator_and_handler.cpp  emulator_and_handler_exception.cpp  emulator_basic.cpp  emulator_does_not_leak_hardware.cpp  emulator_inputs_preserved.cpp  emulator_multiple.cpp  execute.cpp  handler_basic.cpp  handler_inputs_preserved.cpp  handler_multiple.cpp  handler_vcpu_matches_hardware.cpp  vmexit_leaf_and_subleaf.cpp
chipsec_vmms/cr/: api_scratchpad.cpp
chipsec_vmms/ept/: api_scratchpad.cpp
chipsec_vmms/external_interrupt/: api_sandbox.cpp
chipsec_vmms/init_signal/: api_sandbox.cpp
chipsec_vmms/io/: api_scratchpad.cpp  handler_basic.cpp
chipsec_vmms/misc/: api_scratchpad.cpp
chipsec_vmms/monitor_trap/: api_scratchpad.cpp
chipsec_vmms/rdmsr/: CMakeLists.txt  emulate.cpp  emulator_and_handler.cpp  emulator_basic.cpp  emulator_does_not_leak_hardware.cpp  emulator_inputs_preserved.cpp  emulator_multiple.cpp  execute.cpp  handler_basic.cpp  handler_multiple.cpp  handler_vcpu_matches_hardware.cpp  trap_never.cpp  trap_once.cpp  vmexit_address.cpp
chipsec_vmms/wrmsr/: emulate.cpp  execute.cpp
chipsec_vmms/xsetbv/: api_scratchpad.cpp
src/: CMakeLists.txt
